fixes text-align css issue

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -43,10 +43,7 @@
   color: orangered;
 }
 
-.timer {
-  text-align: right;
-}
-
 .game-header {
+  text-align: center;
   margin-bottom: 5px;
 }
